update index and style sheet

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>24plus</title>
-    <link rel="stylesheet" href="./resources/styles.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>24plus</title>
+        <link rel="stylesheet" href="./resources/styles.css">
+    </head>
+    <body>
+        <div id="banner">
+            <h1>24plus</h1>
+            <h4>sobriety counter</h4>
+            <p>Welcome to sobriety counter.We are going to figure out how long you have been
+                sober down to the minute!</p>
+        </div>
+
+    </body>
 </html>
